--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Palm Resorts</title>
 </head>
 <body>
+    
     <div class="container"><section>
-<header></header>
+<header><h1>Palm Resorts!</h1></header>
 <navigation></navigation>
-<article></article>
+<article>
+    <div class="first"><h1>20% off hotels!</h1></div>
+    <div class="second"><h1>We serve free breakfast!</h1></div>
+</article>
 </header>
 
     </section></div>
