--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Palm Resorts</title>
 </head>
 <body>
-    
+        
     <div class="container"><section>
 <header><h1>Palm Resorts!</h1></header>
 <navigation></navigation>
 <article>
-    <div class="first"><h1>20% off hotels!</h1></div>
-    <div class="second"><h1>We serve free breakfast!</h1></div>
+    <div class="first"><img src="Images/experience.jpg" alt="beach" width="300" height="300"><h1>20% off hotels!</h1></div>
+    <div class="second"><img src="Images/joseph-gonzalez-80541-unsplash.jpg" alt="Pancakes"
+        width="300"height="300"><h1>We serve free breakfast!</h1></div>
 </article>
 </header>
+<element></element>
 
     </section></div>
 </body>
