--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <title>Palm Resorts</title>
 </head>
 <body>
-        
-    <div class="container"><section>
-<header><h1>Palm Resorts!</h1></header>
-<navigation></navigation>
-<article>
-    <div class="first"><img src="Images/experience.jpg" alt="beach" width="300" height="300"><h1>20% off hotels!</h1></div>
-    <div class="second"><img src="Images/joseph-gonzalez-80541-unsplash.jpg" alt="Pancakes"
-        width="300"height="300"><h1>We serve free breakfast!</h1></div>
+   
+    <div class="container">
+        <div class="animated"></div>
+            <div class="logo"><img src="Images/PalmResortsLogo.jpg" alt="PalmResortsLogo"
+            width="200" height="200"></div>
+            <header><h1>Palm Resorts!</h1></header>
+            <navigation></navigation>
+            <article>
+                <div class="first"><h1>20% off hotels!</h1><p>Get from our greatest deals on our luxury hotels!</p><img src="Images/experience.jpg" alt="beach" width="300" height="400" ></div>
+                <div class="second"><h1>We serve free breakfast!</h1><p>Breakfast is served through 5:00a.m.-11:00a.m.</p><img src="Images/joseph-gonzalez-80541-unsplash.jpg" alt="Pancakes"
+                    width="300"height="400"></div><section>
+                        <div class="box"><h1>I'm a box!</h1></div>
+   
 </article>
 </header>
 <element></element>
-
-    </section></div>
 </body>
 </html>
